--- a/page12.html
+++ b/page12.html
@@ -78,6 +78,153 @@
     let clickWordIndex = 0; // sequence of user clicks -> word order
     let allWordsRevealed = false;
 
+    // audio
+    let audioCtx = null;
+    let masterGain = null;
+
+    function ensureAudio() {
+      if (!audioCtx) {
+        audioCtx = new (window.AudioContext || window.webkitAudioContext)();
+        masterGain = audioCtx.createGain();
+        masterGain.gain.value = 0.35;
+        masterGain.connect(audioCtx.destination);
+      }
+      if (audioCtx.state === "suspended") {
+        audioCtx.resume().catch(() => {});
+      }
+    }
+
+    function playLockTwinkle() {
+      ensureAudio();
+      const now = audioCtx.currentTime;
+      const lockVolume = 0.6; // overall trim for lock-in sfx
+
+      // Reverb path with slight variation per strike
+      const reverbDelay = audioCtx.createDelay();
+      reverbDelay.delayTime.value = 0.18 + Math.random() * 0.14;
+      const reverbFilter = audioCtx.createBiquadFilter();
+      reverbFilter.type = 'lowpass';
+      reverbFilter.frequency.value = 3200;
+      const reverbGain = audioCtx.createGain();
+      const reverbTail = 1.2 + Math.random() * 0.8; // 1.2–2.0s tail
+      reverbGain.gain.setValueAtTime(0.05 * lockVolume, now);
+      reverbGain.gain.exponentialRampToValueAtTime(0.0001, now + reverbTail);
+      reverbDelay.connect(reverbFilter).connect(reverbGain).connect(masterGain);
+
+      // Base pitch variation
+      const pitchMult = 0.85 + Math.random() * 0.3;
+
+      // Randomize which frequencies play (not all 5 every time)
+      const allHighs = [4113, 4156, 4177, 4199, 4221];
+      const allLows = [215, 237, 258, 280];
+
+      // Pick 2-4 random highs and 1-3 random lows
+      const highFreqs = allHighs.filter(() => Math.random() > 0.3);
+      const lowFreqs = allLows.filter(() => Math.random() > 0.4);
+
+      // Randomize timing
+      const secondHitDelay = 0.35 + Math.random() * 0.25; // 350-600ms
+      const hasSecondHit = Math.random() > 0.3; // 70% chance of second strike
+
+      // Randomize decay time
+      const decayTime = 1.0 + Math.random() * 1.0; // 1-2 seconds
+
+      // First strike - highs
+      highFreqs.forEach(freq => {
+        const osc = audioCtx.createOscillator();
+        const gain = audioCtx.createGain();
+        osc.type = 'sine';
+        // More detune variation per oscillator
+        osc.frequency.value = freq * pitchMult * (0.94 + Math.random() * 0.12);
+        const stopTime = now + decayTime + 0.3;
+        gain.gain.setValueAtTime((0.06 + Math.random() * 0.04) * lockVolume, now);
+        gain.gain.exponentialRampToValueAtTime(0.001, stopTime - 0.06);
+        gain.gain.linearRampToValueAtTime(0.0001, stopTime);
+        osc.connect(gain).connect(masterGain);
+        osc.connect(reverbDelay);
+        osc.start(now);
+        osc.stop(stopTime);
+      });
+
+      // First strike - low body (sometimes skip entirely)
+      if (Math.random() > 0.2) {
+        lowFreqs.forEach(freq => {
+          const osc = audioCtx.createOscillator();
+          const gain = audioCtx.createGain();
+          osc.type = 'sine';
+          osc.frequency.value = freq * pitchMult;
+          const lowStop = now + 0.6;
+          gain.gain.setValueAtTime((0.03 + Math.random() * 0.03) * lockVolume, now);
+          gain.gain.exponentialRampToValueAtTime(0.001, lowStop - 0.08);
+          gain.gain.linearRampToValueAtTime(0.0001, lowStop);
+          osc.connect(gain).connect(masterGain);
+          osc.connect(reverbDelay);
+          osc.start(now);
+          osc.stop(lowStop);
+        });
+      }
+
+      // Second strike (not always)
+      if (hasSecondHit) {
+        const secondHit = now + secondHitDelay;
+        // Pick different subset for second hit
+        const secondHighs = allHighs.filter(() => Math.random() > 0.4);
+
+        secondHighs.forEach(freq => {
+          const osc = audioCtx.createOscillator();
+          const gain = audioCtx.createGain();
+          osc.type = 'sine';
+          osc.frequency.value = freq * pitchMult * (0.94 + Math.random() * 0.12);
+          const secondStop = secondHit + decayTime + 0.25;
+          gain.gain.setValueAtTime(0, now);
+          gain.gain.setValueAtTime((0.08 + Math.random() * 0.06) * lockVolume, secondHit);
+          gain.gain.exponentialRampToValueAtTime(0.001, secondStop - 0.08);
+          gain.gain.linearRampToValueAtTime(0.0001, secondStop);
+          osc.connect(gain).connect(masterGain);
+          osc.connect(reverbDelay);
+          osc.start(now);
+          osc.stop(secondStop);
+        });
+      }
+
+      // Occasional third tiny hit (20% chance)
+    if (Math.random() > 0.8) {
+      const thirdHit = now + secondHitDelay + 0.2 + Math.random() * 0.3;
+    const freq = allHighs[Math.floor(Math.random() * allHighs.length)];
+    const osc = audioCtx.createOscillator();
+    const gain = audioCtx.createGain();
+    osc.type = 'sine';
+    osc.frequency.value = freq * pitchMult * (0.9 + Math.random() * 0.2);
+    const thirdStop = thirdHit + 0.85;
+    gain.gain.setValueAtTime(0, now);
+    gain.gain.setValueAtTime(0.04 * lockVolume, thirdHit);
+    gain.gain.exponentialRampToValueAtTime(0.001, thirdStop - 0.08);
+    gain.gain.linearRampToValueAtTime(0.0001, thirdStop);
+    osc.connect(gain).connect(masterGain);
+    osc.connect(reverbDelay);
+    osc.start(now);
+    osc.stop(thirdStop);
+  }
+  }
+
+    function playCollapseWhump() {
+      ensureAudio();
+      const osc = audioCtx.createOscillator();
+      const gain = audioCtx.createGain();
+      const filter = audioCtx.createBiquadFilter();
+      osc.type = "sine";
+      osc.frequency.setValueAtTime(70, audioCtx.currentTime);
+      osc.frequency.exponentialRampToValueAtTime(32, audioCtx.currentTime + 0.25);
+      filter.type = "lowpass";
+      filter.frequency.setValueAtTime(360, audioCtx.currentTime);
+      filter.frequency.exponentialRampToValueAtTime(140, audioCtx.currentTime + 0.22);
+      gain.gain.setValueAtTime(0.28, audioCtx.currentTime);
+      gain.gain.exponentialRampToValueAtTime(0.0001, audioCtx.currentTime + 0.45);
+      osc.connect(filter).connect(gain).connect(masterGain);
+      osc.start();
+      osc.stop(audioCtx.currentTime + 0.5);
+    }
+
     function resize() {
       canvas.width = window.innerWidth;
       canvas.height = window.innerHeight;
@@ -338,14 +485,15 @@
       }, 1300);
     }
 
-    function collapseGalaxy(index) {
-      if (collapsed[index]) return;
-      if (clickWordIndex >= revealWords.length) return;
+function collapseGalaxy(index) {
+  if (collapsed[index]) return;
+  if (clickWordIndex >= revealWords.length) return;
 
-      collapsed[index] = true;
+  collapsed[index] = true;
+  playCollapseWhump();
 
-      const word = revealWords[clickWordIndex];
-      clickWordIndex++;
+  const word = revealWords[clickWordIndex];
+  clickWordIndex++;
 
       const center = hotspots[index];
 
@@ -532,6 +680,7 @@
 
       lockedHotspots[targetIndex] = true;
       const lockRadius = 180;
+      let lockedAny = false;
 
       for (const p of particles) {
         const dx = p.x - target.x;
@@ -558,7 +707,12 @@
 
           p.vx = 0;
           p.vy = 0;
+          lockedAny = true;
         }
+      }
+
+      if (lockedAny) {
+        playLockTwinkle();
       }
 
       if (lockedHotspots.every(Boolean)) {
