--- a/page10.html
+++ b/page10.html
@@ -23,7 +23,7 @@
 
     #silhouette {
         position: absolute;
-        left: 50%;
+        left: calc(50% - 150px);
         top: 8%;
         transform: translateX(-50%);
         white-space: pre;
