--- a/credits.html
+++ b/credits.html
@@ -30,7 +30,7 @@
 
 thank you for playing.
 
-this project was created by:
+this project was created and directed by:
 yuzhen jacqueline zou
 
 feedback / contact:
